--- a/plugins/csp-wfs-overlays/gui/wfs_overlays_settings.html
+++ b/plugins/csp-wfs-overlays/gui/wfs_overlays_settings.html
@@ -12,3 +12,18 @@ SPDX-License-Identifier: MIT
     </label>
   </div>
 </div>
+
+<div class="strike">
+  <span>Line rendering</span>
+</div>
+
+<div class="row">
+  <div class="col-5">
+    <label class="checklabel">
+      <input type="checkbox" data-callback="wfsOverlays.setInterpolation" checked />
+      <i class="material-icons"></i>
+      <span>Interpolation</span>
+    </label>
+  </div>
+</div>
+
