:wrench: Now the classes follow the required naming style.

--- a/plugins/csp-wfs-overlays/gui/wfs_overlays_settings.html
+++ b/plugins/csp-wfs-overlays/gui/wfs_overlays_settings.html
@@ -3,6 +3,7 @@ SPDX-FileCopyrightText: German Aerospace Center (DLR) <cosmoscout@dlr.de>
 SPDX-License-Identifier: MIT
 -->
 
+<!------- BUTTON TO ENABLE / DISABLE THE PLUGIN ------->
 <div class="row">
   <div class="col-5">
     <label class="checklabel">
@@ -17,6 +18,7 @@ SPDX-License-Identifier: MIT
   <span>Line rendering</span>
 </div>
 
+<!------- BUTTON TO ENABLE / DISABLE THE INTERPOLATION ------->
 <div class="row">
   <div class="col-5">
     <label class="checklabel">
