--- a/src/cs-audio/gui/audio_settings.html
+++ b/src/cs-audio/gui/audio_settings.html
@@ -12,3 +12,15 @@ SPDX-License-Identifier: MIT
         <div data-callback="audio.masterVolume"></div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-5">
+      Output Device
+    </div>
+    <div class="col-7">
+      <select data-callback="audio.outputDevice" data-container="#cosmoscout" data-width="100%"
+        class="simple-value-dropdown">
+        <!-- Filled by JavaScript Function -->
+      </select>
+    </div>
+  </div>
