touren werden angezeigt beim laden.

--- a/plugins/csp-guided-tour/gui/csp-guided-tour-tab.html
+++ b/plugins/csp-guided-tour/gui/csp-guided-tour-tab.html
@@ -1,3 +1,9 @@
 <button class='btn glass block px-3' style='width: 100%;'
     onclick='CosmoScout.callbacks.guidedTours.reset()' data-original-title=''>Test
 </button>
+<button class='btn glass block px-3' style='width: 100%;'
+    onclick='CosmoScout.callbacks.guidedTours.loadTour("Tour1")' data-original-title=''>LoadTour1
+</button>
+<button class='btn glass block px-3' style='width: 100%;'
+    onclick='CosmoScout.callbacks.guidedTours.loadTour("Tour2")' data-original-title=''>LoadTour1
+</button>
