--- a/plugins/csp-guided-tour/gui/csp-guided-tour-tab.html
+++ b/plugins/csp-guided-tour/gui/csp-guided-tour-tab.html
@@ -1,18 +1,20 @@
 <div id="tour-buttons">
-    
+
 </div>
 
-<button class='btn glass block px-3' style='width: 100%;' onclick='CosmoScout.callbacks.guidedTours.reset()' data-original-title=''>Alle Touren zurücksetzen</button> 
+<button class='btn glass block px-3' style='width: 100%;' onclick='CosmoScout.callbacks.guidedTours.reset()'
+  data-original-title=''>Alle Touren zurücksetzen</button>
 
 <template id="tour-button-template">
-<div>
+  <div>
     <label>
-        <input type="checkbox" name="guided-tour" class="radio-button guided-tour-button"  onclick='CosmoScout.guidedTours.onTourButtonClick(this,"%TOURNAME%")'/>
-        <span class="block btn glass">
-          <br>
-          <span>%TOURNAME%</span>
-        </span>
+      <input type="checkbox" name="guided-tour" class="radio-button guided-tour-button"
+        onclick='CosmoScout.guidedTours.onTourButtonClick(this,"%TOURNAME%")' />
+      <span class="block btn glass guided-tour-label">
+        <br>
+        <span>%TOURNAME%</span>
+        <a class="guided-tour-status"></a>
+      </span>
     </label>
-</div>
+  </div>
 </template>
-
