:tada: Add user interface for VirSat.

--- a/plugins/csp-virtual-satellite/gui/virtual-satellite-settings.html
+++ b/plugins/csp-virtual-satellite/gui/virtual-satellite-settings.html
@@ -1,1 +1,6 @@
+<!--
+SPDX-FileCopyrightText: German Aerospace Center (DLR) <cosmoscout@dlr.de>
+SPDX-License-Identifier: MIT
+-->
+
 <p>Your settings here!</p>
