toggle between old and new cloud models

--- a/plugins/csp-atmospheres/gui/atmospheres_settings.html
+++ b/plugins/csp-atmospheres/gui/atmospheres_settings.html
@@ -44,6 +44,17 @@ SPDX-License-Identifier: MIT
     <label class="checklabel">
       <input
         type="checkbox"
+        data-callback="atmosphere.setOldClouds"
+        checked
+      />
+      <i class="material-icons"></i>
+      <span>Old Clouds</span>
+    </label>
+  </div>
+  <div class="col-8 offset-4">
+    <label class="checklabel">
+      <input
+        type="checkbox"
         data-callback="atmosphere.setEnableLimbLuminance"
         checked
       />
